opam-version: "2.0"
name: "radixmap-ipaddr"
maintainer: "paurkedal@gmail.com"
authors: "Petter A. Urkedal"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-radixmap/"
bug-reports: "https://github.com/paurkedal/ocaml-radixmap/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "ipaddr"
  "jbuilder" {build}
  "radixmap"
  "topkg" {build}
  "topkg-jbuilder" {build}
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-radixmap.git"
