opam-version: "2.0"
name: "radixmap-ipaddr"
maintainer: "paurkedal@gmail.com"
authors: "Petter A. Urkedal"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/ocaml-radixmap/"
bug-reports: "https://github.com/paurkedal/ocaml-radixmap/issues"
depends: [
  "dune" {>= "1.3"}
  "ocaml" {>= "4.02.3"}
  "ipaddr"
  "radixmap"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-radixmap.git"
synopsis: "Sets and maps over IP networks based on radixmap"
