opam-version: "1.2"
name: "radixmap"
authors: ["Petter A. Urkedal"]
maintainer: "paurkedal@gmail.com"
homepage: "https://github.com/paurkedal/ocaml-radixmap/"
bug-reports: "https://github.com/paurkedal/ocaml-radixmap/issues"
dev-repo: "https://github.com/paurkedal/ocaml-radixmap.git"
license: "LGPL-3 with OCaml linking exception"

build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "topkg" {build}
  "topkg-jbuilder" {build}
]
