opam-version: "2.0"
name: "radixmap"
maintainer: "paurkedal@gmail.com"
authors: "Petter A. Urkedal"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-radixmap/"
bug-reports: "https://github.com/paurkedal/ocaml-radixmap/issues"
depends: [
  "dune" {build}
  "ocaml" {>= "4.02.3"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-radixmap.git"
synopsis: "Map à la Binary Radix Tree"
