(library
  (name radixmap)
  (public_name radixmap)
  (wrapped false)
  (modules
    Bitword
    Bitword_radixmap
    Bitword_radixmap_sig)
  (modules_without_implementation
    Bitword_radixmap_sig))

(library
  (name radixmap_ipaddr)
  (public_name radixmap-ipaddr)
  (wrapped false)
  (modules
    Ip_radixset
    Ip_radixset_sig
    Ip_radixmap
    Ip_radixmap_sig)
  (modules_without_implementation
    Ip_radixset_sig
    Ip_radixmap_sig)
  (libraries ipaddr radixmap))
